# 2-segment-inverse-kinematics

./: CMakeLists.txt  README.md  backup-prev-main (copy)  backup.txt  journal.txt  kiss_makefile3
src/: main.cpp
